# amethyst_test

./: Cargo.toml  README.md  my_scene.ron
assets/prefab/: auto_fov.ron
config/: display.ron
src/: graphics.rs  main.rs
