[package]
name = "amethyst_test"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.12.0"
log = { version = "0.4.6", features = ["serde"] }
fern = { version = "0.5", features = ["colored"] }
serde = { version = "1.0", features = ["derive"] }

#[workspace]

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
default = ["vulkan"]
